// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render card 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <span
      className="sc-AxjAm jnaJRY lnr lnr-"
    />
    <h3
      className="sc-AxhCb ICwhD"
    >
      
    </h3>
    <div
      className="sc-AxhUy fNfuCs"
    >
      
    </div>
  </div>
</div>
`;

exports[`Card should render card with children 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <span
      className="sc-AxjAm jnaJRY lnr lnr-"
    />
    <h3
      className="sc-AxhCb ICwhD"
    >
      
    </h3>
    <div
      className="sc-AxhUy fNfuCs"
    >
      Children textual content
    </div>
  </div>
</div>
`;

exports[`Card should render card with item 1`] = `
<div
  className="sc-AxirZ bnGNSL"
>
  <div
    className="sc-AxiKw wDwik"
  >
    <span
      className="sc-AxjAm jnaJRY lnr lnr-lnr-users"
    />
    <h3
      className="sc-AxhCb ICwhD"
    >
      Users
    </h3>
    <div
      className="sc-AxhUy fNfuCs"
    >
      
    </div>
  </div>
</div>
`;
